--- a/homework_4/style.css/style.css
+++ b/homework_4/style.css/style.css
@@ -293,11 +293,19 @@ img {
 }
 
 .footer-info {
-    width: 394px;
+    width: 398px;
     margin: auto;
     font-family: 'OpenSans', sans-serif;
     font-size: 16px;
     color: #ffffff;
     text-transform: capitalize;
     padding: 38px 0 33px 0;
+} 
+
+span {
+    font-family: 'OpenSans', sans-serif;
+    font-size: 16px;
+    color: #46bfa9;
+    text-transform: capitalize;
+    margin-left: 6px;
 }
