--- a/homework_4/style.css/style.css
+++ b/homework_4/style.css/style.css
@@ -88,7 +88,8 @@ img {
 
   .main {
       width: 1600px;
-      margin-top: 33px;
+      margin: 33px auto auto auto;
+
   }
 
   /* section_1 */
@@ -290,6 +291,7 @@ img {
 .footer {
     background-color: #323232;
     width: 1600px;
+    margin: auto;
 }
 
 .footer-info {
